# Flex-Bison-Compiler

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  TODO
.github/workflows/: main.yml  pipeline.yaml
doc/readme/: Docker.md  Ubuntu.md  Windows.md
script/: build.bat  build.sh  start.bat  start.sh  test.bat  test.sh
script/linux/: build.sh  install.sh  start.sh
script/ubuntu/: build.sh  docker-build.sh  docker-run.sh  start.sh  test.sh
script/windows/: build.bat  docker-build.bat  docker-run.bat  start.bat  test.bat
src/: main.c
src/backend/code-generation/: generator.c
src/backend/domain-specific/: calculator.c  calculator.h
src/backend/semantic-analysis/: README.md  abstract-syntax-tree.h
src/backend/support/: logger.c  logger.h  shared.h
src/frontend/lexical-analysis/: flex-actions.c  flex-actions.h  flex-patterns.l
src/frontend/syntactic-analysis/: bison-actions.c  bison-actions.h  bison-grammar.y
src/main/c/: EntryPoint.c
src/main/c/backend/code-generation/: Generator.c  Generator.h
src/main/c/backend/domain-specific/: Calculator.c  Calculator.h
src/main/c/backend/support/: Shared.h
src/main/c/frontend/lexical-analysis/: Flex2Actions.c  Flex2Actions.h  Flex2Patterns.l  FlexActions.c  FlexActions.h  FlexExport.h  FlexPatterns.l  LexicalAnalyzerContext.c  LexicalAnalyzerContext.h
src/main/c/frontend/syntactic-analysis/: AbstractSyntaxTree.c  AbstractSyntaxTree.h  BisonActions.c  BisonActions.h  BisonGrammar.y  SyntacticAnalyzer.c  SyntacticAnalyzer.h
src/main/c/shared/: CompilerState.h  Environment.c  Environment.h  Logger.c  Logger.h  String.c  String.h  Type.h
src/main/c/shared/support/: Environment.c  Environment.h  Logger.c  Logger.h  String.h
src/test/c/accept/: 01-Kleene-star  02-Kleene-plus  03-words  04-division  04-numbers  05-many-char  06-any-char  06-parenthesis  07-comment  07-multiline-comment  08-default  10-PL0  11-expressions
src/test/c/reject/: 01-malformed-rule  02-malformed-regex  03-undeclared-regex  04-open-comment  04-unknown-character  05-division-by-zero  06-invalid-function  07-open-comment  08-no-param-parenthesis  09-missing-endline  10-unsupported-param-type  11-no-function-parenthesis
test/accept/: 03-multiplication
test/reject/: 01-unbalanced-parenthesis  02-malformed-expression
